frontend/test/should_fail/newAttributeInitializer_type.grg
#using "new.gm"

rule r
{
	if{ new Barfuss@(i="Ja Servus") != null; }

	modify {
	---
		def ref bf:Barfuss = new Barfuss@(i="Pfui Deifi");
	}
}